# harp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  dnsctl.service  harp.service  main.py  pyproject.toml
dnsctl/: app.py  database.py  exceptions.py  models.py  sync.py
dnsctl/client/: base.py  dhcp.py
dnsctl/routers/: auth.py  collections.py
dnsctl/templates/: base.html  login.html  profile.html  setup.html
dnsctl/templates/collections/: _host_edit_row.html  _host_row.html  detail.html  form.html  host_form.html  index.html
dnsctl/templates/discovery/: import_form.html  index.html
dnsctl/templates/hosts/: index.html
dnsctl/templates/settings/: index.html
harp/: app.py  changelog.py  config.py  crypto.py  database.py  dependencies.py  drift.py  log_poller.py  logs_db.py  models.py  sync.py
harp/client/: blocking.py  dhcp.py  dns.py  logs.py
harp/routers/: auth.py  blocking.py  collections.py  discovery.py  hosts.py  logs.py  settings.py  undo.py
harp/static/: style.css
harp/templates/: base.html  login.html  profile.html  setup.html
harp/templates/blocking/: _list_row.html  _rule_row.html  _ruleset_row.html  lists.html  ruleset_detail.html  rulesets.html
harp/templates/collections/: _blocking_toggle.html  _blocklist_item.html  _host_edit_row.html  _host_row.html  _rules_summary.html  _ruleset_item.html  detail.html  form.html  host_form.html  index.html
harp/templates/discovery/: import_form.html  index.html
harp/templates/hosts/: index.html
tests/: conftest.py  test_host_crud.py  test_undo.py
(+5 files in other folders)
