[project]
name = "dnsctl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "cryptography>=47.0.0",
    "fastapi[standard]>=0.136.1",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.14.0",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.46.0",
]
