[project]
name = "harp"
version = "0.1.0"
description = "Host Address Registration Portal — Technitium DNS/DHCP management UI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "cryptography>=47.0.0",
    "fastapi[standard]>=0.136.1",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.14.0",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
